[package]
name = "tilt-sdk-cloudengine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tilt-sdk = { path = "../tilt-sdk", package = "tilt-sdk" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tilt-sdk = { path = "../tilt-sdk", package = "tilt-sdk" }
