[package]
name = "tilt-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1.0"
lazy_static = "1.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
tracing-test = "0.2"
