[package]
name = "tilt-cli"
version = "0.1.0"
edition = "2024"
authors = ["Stanislav Bolshakov <st.bolshakov@gmail.com>"]
description = "T1 Public Cloud CLI built on top of the T1LT SDK"
repository = "https://github.com/tiltcloud/tilt-sdk-rust"
license = "MIT"

[[bin]]
name = "tilt-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tilt-sdk-cloudengine = { path = "../../crates/tilt-sdk-cloudengine" }
tilt-sdk = { path = "../../crates/tilt-sdk" }
comfy-table = "7.2"
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
dirs = "5.0"
